--- a/pt/presentaion-timer.css
+++ b/pt/presentaion-timer.css
@@ -58,3 +58,13 @@ button {
 	padding: 0.2em 0.4em;
 	font-family: Verdana, system-ui, Helvetica, sans-serif;
 }
+
+#backButton {
+	font-family: Verdana, system-ui, Helvetica, sans-serif;
+	position: absolute;
+	bottom: 10px;
+	left: 10px;
+	color: #2c2c2c;
+	background-color: black;
+	border: none;
+}
