--- a/pt/presentaion-timer.css
+++ b/pt/presentaion-timer.css
@@ -68,3 +68,12 @@ button {
 	background-color: black;
 	border: none;
 }
+
+#submitButton {
+	background-color: white;
+	color: black;
+	/* border: #2c2c2c; */
+	border-radius: 50px;
+	padding: 0.5em 1em;
+	border-style: none;
+}
