Demo mode added, colours fixed.

--- a/pt/presentaion-timer.css
+++ b/pt/presentaion-timer.css
@@ -60,6 +60,7 @@ button {
 }
 
 #backButton {
+	display: none;
 	font-family: Verdana, system-ui, Helvetica, sans-serif;
 	position: absolute;
 	bottom: 10px;
@@ -76,4 +77,16 @@ button {
 	border-radius: 50px;
 	padding: 0.5em 1em;
 	border-style: none;
+}
+
+#demoButton {
+	font-family: Verdana, system-ui, Helvetica, sans-serif;
+	position: absolute;
+	bottom: 10px;
+	left: 10px;
+	border-radius: 50px;
+	padding: 0.5em 1em;
+	color: white;
+	background-color: grey;
+	border: none;
 }
